feat: add name input for attachment groups and update related components
- Introduced a mandatory name input field for creating and editing attachment groups in the FileHubAttachmentGroupModal component.
- Updated the AttachmentGroupsGrid and MemberManagementPanel components to display the group name instead of the key.
- Enhanced locale support by adding new strings for name input validation and placeholders in both English and Arabic locales.
- Adjusted API interfaces to include the name property for attachment groups.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -598,6 +598,10 @@
         "editTitle": "تعديل محتوى تلفزيوني",
         "viewTitle": "محتوى التلفزيون",
         "createHint": "أنشئ محتوى تلفزيوني جديداً عن طريق اختيار الملفات من مرفقاتك المتاحة.",
+        "nameLabel": "الاسم",
+        "namePlaceholder": "أدخل اسم المجموعة",
+        "nameHint": "اتركه فارغاً للاحتفاظ بالاسم الحالي.",
+        "nameRequired": "الاسم مطلوب",
         "expirationLabel": "تاريخ انتهاء الصلاحية (اختياري)",
         "expirationHint": "اتركه فارغاً لإبقاء هذه المجموعة متاحة إلى ما لا نهاية.",
         "selectedAttachments": "المرفقات المحددة ({count})",
