--- a/locales/en.json
+++ b/locales/en.json
@@ -598,6 +598,10 @@
         "editTitle": "Edit TV Content",
         "viewTitle": "TV Content",
         "createHint": "Create new TV content by selecting files from your available attachments.",
+        "nameLabel": "Name",
+        "namePlaceholder": "Enter group name",
+        "nameHint": "Leave empty to keep current name.",
+        "nameRequired": "Name is required",
         "expirationLabel": "Expiration Date (optional)",
         "expirationHint": "Leave empty to keep this group available indefinitely.",
         "selectedAttachments": "Selected Attachments ({count})",
