feat(i18n): add fetch failure messages to toast notifications in Arabic and English locales
- Introduced new localized messages for fetch failure notifications in both Arabic and English JSON files.
- Updated type definitions to include the new fetchFailed string in the locale type.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1161,6 +1161,7 @@
         "delegate": "تفويض"
       },
       "toasts": {
+        "fetchFailed": "فشل في جلب المهام. يرجى المحاولة مرة أخرى.",
         "markSeenSuccess": "تم وضع علامة على المهمة كمشاهدة",
         "markSeenFailed": "فشل في وضع علامة على المهمة كمشاهدة",
         "submitSuccess": "تم إرسال المهمة للمراجعة بنجاح!",
