feat: add task restart functionality and enhance submission management
- Implemented a new handleRestart function in TeamTaskCard to allow users to restart tasks, which clears existing submissions and attachments.
- Updated the useTaskSubmissionsStore to include a removeSubmissionsForTask method for better management of task submissions.
- Enhanced localization by adding new strings for restart confirmations and success/error messages in both Arabic and English locales.
- Improved UI by integrating the restart action into the task card's action buttons.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -301,7 +301,11 @@
       "unknown": "غير معروف",
       "high": "عالية",
       "medium": "متوسطة",
-      "low": "منخفضة"
+      "low": "منخفضة",
+      "showing": "إظهار",
+      "tickets": "تذكرة",
+      "previous": "السابق",
+      "next": "التالى"
     },
     "actions": {
       "viewDetails": "عرض التفاصيل",
@@ -1058,7 +1062,8 @@
           "delete": "حذف",
           "approve": "موافقة",
           "reject": "رفض",
-          "viewDetails": "عرض التفاصيل"
+          "viewDetails": "عرض التفاصيل",
+          "restart": "إعادة تشغيل"
         },
         "status": {
           "pendingReview": "في انتظار المراجعة",
@@ -1097,7 +1102,10 @@
       "confirmations": {
         "deleteTitle": "حذف المهمة",
         "deleteMessage": "هل أنت متأكد من حذف هذه المهمة؟",
+        "restartTitle": "إعادة تشغيل المهمة",
+        "restartMessage": "هل أنت متأكد أنك تريد إعادة تشغيل هذه المهمة؟ سيتم حذف جميع التقديمات والتفويضات نهائياً.",
         "confirmText": "حذف",
+        "confirmRestartText": "إعادة تشغيل",
         "cancelText": "إلغاء"
       },
       "toasts": {
@@ -1111,6 +1119,8 @@
         "createFailed": "فشل في إنشاء المهمة. يرجى المحاولة مرة أخرى.",
         "updateSuccess": "تم تحديث المهمة بنجاح!",
         "updateFailed": "فشل في تحديث المهمة. يرجى المحاولة مرة أخرى.",
+        "taskRestarted": "تم إعادة تشغيل المهمة بنجاح",
+        "restartFailed": "فشل في إعادة تشغيل المهمة. يرجى المحاولة مرة أخرى.",
         "uploadFailed": "فشل في رفع المرفقات الجديدة. يرجى المحاولة مرة أخرى.",
         "missingUploadKey": "مفتاح الرفع مفقود للمرفقات الجديدة. يرجى إعادة محاولة الرفع."
       }
